--- a/dev/saaacartfundraiser/style/sass/components/_section-separators.scss
+++ b/dev/saaacartfundraiser/style/sass/components/_section-separators.scss
@@ -3,8 +3,8 @@
  */
 section {
     position: relative;
-    padding-top: 1em;
-    padding-bottom: 7em;
+    // padding-top: 1em;
+    // padding-bottom: 7em;
     background: #fff;
 
     &::before,
@@ -13,11 +13,11 @@ section {
         content: '';
         pointer-events: none;
     }
-}
 
-#how-it-works {
-    background: #0869a5;
-    color: #b3e1ff;
+    .container {
+      padding-top: 2em;
+      padding-bottom: 7em;
+    }
 }
 
 /*
