--- a/dev/saaacartfundraiser/style/sass/parts/_how-it-works.scss
+++ b/dev/saaacartfundraiser/style/sass/parts/_how-it-works.scss
@@ -9,11 +9,6 @@
   justify-content: center;
 }
 
-.how-it-works-heading {
-  font-size: 7em;
-  text-align:center;
-}
-
 .how-it-works-list {
   list-style-type: none;
 
